# affirmative-sampling

./: CITATION.cff  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: continuous-integration.yaml  dependencies-update.yaml
src/affirmative_sampling/: __init__.py  algorithm.py  example.py
tests/: __init__.py  test_affirmative_sampling.py  test_algorithm.py  test_example.py
