[tool.poetry]
authors = [
  "Jérémie Lumbroso <lumbroso@cs.princeton.edu>",
  "Conrado Martínez <conrado@cs.upc.edu>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Reference implementation of the Affirmative Sampling algorithm by Jérémie Lumbroso and Conrado Martínez (2022)."
homepage = "https://github.com/jlumbroso/affirmative-sampling"
include = [
  "README.md",
]
keywords = []
license = "LGPL-3.0-or-later"
name = "affirmative-sampling"
readme = "README.md"
repository = "https://github.com/jlumbroso/affirmative-sampling"
version = "1.0.0"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39}

[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
python = "^3.8"
randomhash = "^0.6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
codecov = "^2.1.12"
ipykernel = "^5.3.4"
ipywidgets = "^7.5.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-repeat = "^0.9.1"
# pytest-subtests = "^0.3.2"
# sphinx = "^3.3.0"
# sphinx-autodoc-typehints = "^1.11.1"
# sphinx-rtd-theme = "^0.5.0"
tox = "^3.20.1"
tox-poetry-dev-dependencies = "^0.0.5"

# dependabot dependency pins (vulnerability warnings)
autopep8 = "^1.6.0"
ipython = "^7.31.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
